# Navihub

./: bruno-style-preview.html  bruno-visual-preview.html  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: mod.rs  mysql.rs  mysql_admin.rs  sqlite.rs  sqlite_admin.rs
src-tauri/src/monitor/: system.rs
src-tauri/src/ssh/: session.rs
src/features/connections/: ConnectionDialog.vue  ConnectionExplorer.vue  SchemaTree.vue  connectionData.js
src/features/database/: DatabaseCreateDialog.vue  DatabaseDdlPanel.vue  DatabaseEmptyState.vue  DatabaseErDiagram.vue  DatabaseQueryEditor.vue  DatabaseResultFooter.vue  DatabaseSearchBar.vue  DatabaseVirtualTable.vue  DatabaseWorkspace.vue  TableDesigner.vue  databaseApi.js  databaseDefaults.js  databaseDialect.js  databaseLogos.js  databaseObjectActions.js  databaseQueryUtils.js  databaseTableDesigner.js  databaseTableUtils.js  mysqlAdminApi.js  mysqlApi.js  sqliteAdminApi.js  sqliteApi.js
src/features/monitor/: MonitorWorkspace.vue  monitorApi.js
src/features/settings/: SettingsDialog.vue  terminalThemes.js
src/features/sftp/: SftpWorkspace.vue
src/features/terminal/: SftpEditorDialog.vue  SftpFilePane.vue  SshWorkspace.vue  (+3 more)
src/layouts/: AppShell.vue  ModuleRail.vue  WorkspaceTabs.vue
src/shared/: ContextMenu.vue  globalMessage.js  useAppConnections.js  usePersistentState.js  workspaces.js
src/styles/: index.css
