[package]
name = "myhub"
version = "0.1.0"
description = "Database, SSH and SFTP desktop client"
authors = ["MyHub"]
edition = "2021"

[lib]
name = "myhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.0"
mysql = "28.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
libc = "0.2"
